2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (setup_xml_parser): Removed
	superfluous check of the return value of g_hash_table_new which is
	guaranteed to succeed.

	* nasl/nasl_builtin_nmap.c (setup_xml_parser, set_opentag_callbacks,
	set_closetag_callbacks): Changed return type to void.

	* nasl/nasl_builtin_nmap.c (nmap_create): No need to check the return
	value of setup_xml_parser() anymore.

2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c: Improved documentation (formatting and
	content).

	*  nasl/nasl_builtin_nmap.c (tmphost_add_port,
	tmphost_add_nse_hostscript, tmphost_add_nse_portscript,
	current_host_saveall, save_host_state, save_open_ports,
	register_service, save_detected_os, save_tcpseq_details,
	save_ipidseq_details, save_traceroute_details, save_portscripts,
	save_hostscripts): Changed return type to void.

011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (nmap_run_and_parse): Added a check to
	distinguish between error and eof after fread() on imported files.

2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (get_default_portrange): Moved the internal cmp()
	function to a higher level as nested functions are not standard (GCC extension).

2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (nmap_create, add_arg, tmphost_add_port,
	tmphost_add_nse_hostscript, tmphost_add_nse_portscript): Removed
	superfluous checks of the return value of g_malloc which doesn't
	return on failure.

2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (register_service): Ensure that port
	version is set before registering it.

2011-06-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/arglists.c (arg_set_name, arglist2str): Removed
	now unused functions.

	* misc/arglists.h: Removed protos accordingly.
